upgrade: removing pragmatic dnd and using custom provider

--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "check": "biome check --write ./"
   },
   "dependencies": {
-    "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
-    "@atlaskit/pragmatic-drag-and-drop-react-drop-indicator": "^3.2.10",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -67,6 +65,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.17",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "react-email": "5.0.5",
